<resources>
    <string name="app_name">Space Forks</string>
    <string name="game_title">Space Forks</string>
    <string name="start">Start</string>
    <string name="options">Options</string>
    <string name="leaderboard">Leaderboard</string>
    <string name="tilt_controls">Tilt Controls</string>
    <string name="audio_effects">Audio Effects</string>
    <string name="music">Music</string>
    <string name="practice_mode">Practice Mode</string>
    <string name="game_over">Game Over</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>