<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    tools:context=".MainMenuActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center">
        <TextView
            android:id="@+id/title_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/bungee_outline"
            android:gravity="center"
            android:text="@string/game_title"
            android:textColor="@color/white"
            android:textSize="70sp"
            android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/start_button"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@id/title_header"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:textSize="12dp"
            android:textStyle="bold"
            android:background="@drawable/btn_round1"
            android:textColor="@color/sf_grey"
            android:text="@string/start" />

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:weightSum="2"
            android:paddingLeft="40dp"
            android:paddingRight="40dp"
            android:paddingBottom="30dp"
            android:layout_below="@id/start_button">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/options_button"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="5dp"
                android:layout_weight="1"
                android:background="@drawable/btn_round1"
                android:textSize="12dp"
                android:textStyle="bold"
                android:textColor="@color/sf_grey"
                android:text="@string/options" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/leaderboard_button"
                android:text="@string/leaderboard"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:layout_marginTop="10dp"
                android:layout_marginStart="5dp"
                android:textColor="@color/sf_grey"
                android:textSize="12dp"
                android:textStyle="bold"
                android:background="@drawable/btn_round1"/>
        </TableRow>
    </RelativeLayout>

    <androidx.fragment.app.FragmentContainerView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/fragment_container1"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
</FrameLayout>