<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="50dp"
    android:paddingRight="50dp"
    android:gravity="center"
    android:background="@drawable/background1"
    tools:context=".fragments.OptionsMenuFragment">

    <TextView
        android:id="@+id/text1"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_alignParentStart="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:layout_toStartOf="@+id/toggle1"
        android:gravity="center"
        android:textSize="24dp"
        android:text="@string/tilt_controls"
        android:textColor="@color/white"/>

    <ToggleButton
        android:id="@id/toggle1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="14dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp" />

    <TextView
        android:id="@+id/text2"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_below="@id/text1"
        android:layout_alignParentStart="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:layout_toStartOf="@+id/toggle2"
        android:gravity="center"
        android:text="@string/audio_effects"
        android:textSize="24dp"
        android:textColor="@color/white"/>

    <ToggleButton
        android:id="@id/toggle2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:layout_below="@id/toggle1" />

    <TextView
        android:id="@+id/text3"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_below="@id/text2"
        android:layout_alignParentStart="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:layout_toStartOf="@+id/toggle3"
        android:gravity="center"
        android:text="@string/music"
        android:textSize="24dp"
        android:textColor="@color/white"/>

    <ToggleButton
        android:id="@id/toggle3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:layout_below="@id/toggle2"/>

    <TextView
        android:id="@+id/text4"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_alignParentStart="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:layout_toStartOf="@+id/toggle4"
        android:gravity="center"
        android:textSize="24dp"
        android:text="@string/practice_mode"
        android:layout_below="@id/text3"
        android:textColor="@color/white"/>

    <ToggleButton
        android:id="@id/toggle4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:layout_below="@id/toggle3"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/options_back_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="26dp"
        android:layout_below="@id/toggle4"
        android:layout_alignParentEnd="true"
        android:src="?attr/homeAsUpIndicator"
        android:rotation="180"/>

</RelativeLayout>